@@ -379,6 +379,7 @@ int dwarf_read_cie_fde_prefix(Dwarf_Debug dbg,
 
 int dwarf_create_fde_from_after_start(Dwarf_Debug dbg,
         struct cie_fde_prefix_s *  prefix,
+        Dwarf_Small *section_pointer,
         Dwarf_Small *frame_ptr,
         int use_gnu_cie_calc,
         Dwarf_Cie  cie_ptr_in,
@@ -387,6 +388,7 @@ int dwarf_create_fde_from_after_start(Dwarf_Debug dbg,
 
 int dwarf_create_cie_from_after_start(Dwarf_Debug dbg,
         struct cie_fde_prefix_s *prefix,
+        Dwarf_Small* section_pointer,
         Dwarf_Small* frame_ptr,
         Dwarf_Unsigned cie_count,
         int use_gnu_cie_calc,
